# Termicolor

./: .gitignore  LICENSE  README.md  pyproject.toml  quick.py  setup.py  testyshity.py
Termicolor/: All.py  Color.py
src/Termicolor/: All.py  Ansi.py  Attributes.py  Background.py  Color.py  Foreground.py  Styles.py  __init__.py
src/Termicolor.egg-info/: PKG-INFO
