[project]
name = "Termicolor"
version = "1.0.0"
description = "Simple, intuitive, chainable API for styling and coloring the terminal"
readme = {file = "LICENSE"}
authors = ["border-l"]
requires-python = ">=3.5"
dependencies= [
    "colorama>=0.4.4
]
classifiers = [
    'Development Status :: 4 - Beta',
    'Intended Audience :: Developers',
    'License :: MIT License',
    "Programming Language :: Python",
    "Operating System :: OS Independent",
    "Topic :: Terminals",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: User Interfaces",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
